Fixed invisible arrow icons

--- a/src/components/Converter/converter.scss
+++ b/src/components/Converter/converter.scss
@@ -42,4 +42,9 @@
       scale: 1.5;
     }
   }
+
+  &__arrow-icon {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
 }
